<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/calciback"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/calculator"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/etFirstvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_first_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etSecondvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/enter_second_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/etAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="#60ffffff"
        android:hint="@string/ans"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textColor="#000000"
        android:textColorHint="#EFEBE9"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#586C63"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/plus"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/subBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#586C63"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/sub"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/mulBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#586C63"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/mul"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <Button
        android:id="@+id/divbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#586C63"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/divv"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

</LinearLayout>